--- a/ElectionMachineJSP/src/main/webapp/CSS/style.css
+++ b/ElectionMachineJSP/src/main/webapp/CSS/style.css
@@ -15,14 +15,19 @@ body {
   border-radius: 10px;
   padding: 20px 20px 20px 20px;
 }
-
-.bottons {
+.question-text{
+	padding:15px;
+}
+.form-elements{
+	padding:15px;
+}
+.buttons {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 20px;
 }
-.submit-botton {
+.submit-button {
   color: #495057;
   margin: 10px auto;
   text-align: center;
